--- a/desafios/desafio011-corrigido/style.css
+++ b/desafios/desafio011-corrigido/style.css
@@ -59,6 +59,10 @@ section{
     font-size: 3.5vw;
 }
 
+section p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -68,16 +72,34 @@ section.normal{
 section.imagem{
     background-color: gray;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.541);
 }
 
 section.imagem > p{
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.445);
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+    
+}
+
+section#img01{
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img02{
+    background-image: url('imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
 footer{
+    font-family: var(--fonte1);
     background-color: black;
     text-align: center;
     color: white;
